create cell's by js

--- a/index.html
+++ b/index.html
@@ -48,108 +48,7 @@
 								<div class="space__latter-item">К</div>
 							</div>
 							<div class="space__fight-wrap">
-								<div class="space__fight-list">
-									<div class="space__fight-item space__fight-item--miss"></div>
-									<div class="space__fight-item space__fight-item--damage"></div>
-									<div class="space__fight-item space__fight-item--killed"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-								</div>
+								<div class="space__fight-list"></div>
 							</div>
 						</div>
 					</div>
@@ -180,108 +79,7 @@
 								<div class="space__latter-item">К</div>
 							</div>
 							<div class="space__fight-wrap">
-								<div class="space__fight-list">
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-									<div class="space__fight-item"></div>
-								</div>
+								<div class="space__fight-list"></div>
 							</div>
 						</div>
 					</div>
