--- a/index.html
+++ b/index.html
@@ -87,7 +87,18 @@
 			</div>
 			<div class="ships">
 				<div class="ships__wrap">
-					<div class="ships__list">ships list</div>
+					<div class="ships__list">
+						<div class="ships__item" data-ship-length-1></div>
+						<div class="ships__item" data-ship-length-2></div>
+						<div class="ships__item" data-ship-length-3></div>
+						<div class="ships__item" data-ship-length-4></div>
+						<div class="ships__item" data-ship-length-5></div>
+						<div class="ships__item" data-ship-length-6></div>
+						<div class="ships__item" data-ship-length-7></div>
+						<div class="ships__item" data-ship-length-8></div>
+						<div class="ships__item" data-ship-length-9></div>
+						<div class="ships__item" data-ship-length-10></div>
+					</div>
 				</div>
 			</div>
 		</div>
