move static files

--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -107,7 +107,7 @@
 		</div>
 	</div>
 
-	<script src="/node-server/node_modules/socket.io-client/dist/socket.io.min.js"></script>
-	<script src="app.js"></script>
+	<script src="./socket.io.min.js"></script>
+	<script src="./app.js"></script>
 </body>
 </html>
