--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -7,7 +7,7 @@
 	<title>Морской бой</title>
 
 	<link rel="stylesheet" href="./css/normalize.min.css">
-	<link rel="stylesheet" href="./css/main.min.css">
+	<link rel="stylesheet" href="./css/main.css">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -107,7 +107,7 @@
 		</div>
 	</div>
 
-	<script src="./socket.io.min.js"></script>
-	<script src="./app.js"></script>
+	<script src="./js/socket.io.min.js"></script>
+	<script type="module" src="./js/app.js"></script>
 </body>
 </html>
