--- a/node-server/public/index.html
+++ b/node-server/public/index.html
@@ -22,6 +22,12 @@
 			<div class="space">
 				<div class="space__wrap">
 					<div class="space__box space__box--enemy">
+                  <div class="space__header space__header--enemy">
+                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                     </svg>
+                     <span>Вражеское поле</span>   
+                  </div>
 						<div class="space__number-list">
 							<div class="space__number-item">1</div>
 							<div class="space__number-item">2</div>
@@ -53,6 +59,12 @@
 						</div>
 					</div>
 					<div class="space__box space__box--player">
+                  <div class="space__header space__header--player">
+                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
+                     </svg>
+                     <span>Ваше поле</span>
+                  </div>
 						<div class="space__number-list">
 							<div class="space__number-item">1</div>
 							<div class="space__number-item">2</div>
